area/apps/bezeichner/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bezeichner-np
  namespace: bezeichner
spec:
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
  policyTypes:
    - Ingress
    - Egress
